--- a/app/home/home.component.html
+++ b/app/home/home.component.html
@@ -1,5 +1,5 @@
 <div class= "col-md-4">
-    <img src= "app/assets/images/profile.jpg" alt= "Headshot" class= "img-responsive img-circle pull-right" />
+    <img src= "app/assets/images/profile.jpg" alt= "Headshot" class= "img-responsive img-thumbnail pull-right" />
 </div>    
 <div class= "col-md-8">
     <div class="jumbotron">
